k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clearinghouse-app
  namespace: default
  labels:
    app: clearinghouse-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: clearinghouse-app
